パスワード変更ページの追加 サーバーとの通信によるデータベースへの接続処理の追加

--- a/app/src/main/res/layout/plugadd_layout.xml
+++ b/app/src/main/res/layout/plugadd_layout.xml
@@ -31,6 +31,7 @@
             android:id="@+id/IDtextView"
             android:hint="ID"
             android:textSize="30dp"
+            android:inputType="text"
             android:background="@drawable/newtouroku"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
@@ -40,10 +41,11 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/PASStextView"
+            android:id="@+id/NametextView"
             android:background="@drawable/newtouroku"
             android:hint="name"
             android:textSize="30dp"
+            android:inputType="text"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_alignParentStart="true"
