--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -31,6 +31,7 @@
             android:id="@+id/IDtextView"
             android:hint=" ID"
             android:textSize="30dp"
+            android:inputType="text"
             android:background="@drawable/newtouroku"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
@@ -44,6 +45,7 @@
             android:background="@drawable/newtouroku"
             android:hint=" PASSWORD"
             android:textSize="30dp"
+            android:inputType="text"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_alignParentStart="true"
