--- a/app/src/main/res/layout/logout_layout.xml
+++ b/app/src/main/res/layout/logout_layout.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal" android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <Button
         android:text="ログアウトする"
@@ -9,5 +13,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/Nextbutton"
         android:textSize="30dp"
-        android:layout_weight="2" />
+        android:layout_weight="1" />
+
+        </LinearLayout>
+
 </LinearLayout>
