--- a/app/src/main/res/layout/userconfig_layout.xml
+++ b/app/src/main/res/layout/userconfig_layout.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal" android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <Button
         android:text="パスワードを変更する"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/Nextbutton"
-        android:textSize="30dp"
-        android:layout_weight="2" />
+        android:layout_weight="1"
+        android:id="@+id/GoChangePassButton"
+        android:textSize="30dp" />
+
+        <Button
+            android:text="？？？"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/ConfigButton"
+            android:textSize="30dp" />
+
+        </LinearLayout>
 
 </LinearLayout>
