--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -1,61 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    tools:context=".HomeActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?android:actionBarSize">
+        android:minHeight="?android:actionBarSize"
+        android:background="@color/colorPrimary"
+        >
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
+    <!--10/21　　　PagerTabStrip　-->
+
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <com.github.mikephil.charting.charts.CombinedChart
-            android:id="@+id/chart"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_margin="0dp"
-            />
-
-        <TextView
-            android:id="@+id/PriceTextBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/chart"
-            android:text="金額表示"
-            android:textSize="25dp"/>
-
-        <LinearLayout
+        >
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/strip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
-            <Button
-                android:id="@+id/timerButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="タイマー"/>
+            android:layout_gravity="top"
+            android:paddingBottom="6dp"
+            android:paddingTop="6dp" >
 
-            <Button
-                android:id="@+id/configButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="設定"/>
-        </LinearLayout>
-    </LinearLayout>
+        </android.support.v4.view.PagerTabStrip>
 
-
+    </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
