--- a/app/src/main/res/layout/logout_layout.xml
+++ b/app/src/main/res/layout/logout_layout.xml
@@ -3,17 +3,24 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?android:actionBarSize"
+        android:background="@color/colorPrimary" />
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal" android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <Button
-        android:text="ログアウトする"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/Nextbutton"
-        android:textSize="30dp"
-        android:layout_weight="1" />
+    <!--<Button-->
+        <!--android:text="ログアウトする"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/Nextbutton"-->
+        <!--android:textSize="30dp"-->
+        <!--android:layout_weight="1" />-->
 
         </LinearLayout>
 
