--- a/app/src/main/res/layout/timer_layout.xml
+++ b/app/src/main/res/layout/timer_layout.xml
@@ -14,33 +14,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="4">
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_gravity="center"
             android:text="開始時間"/>
 
         <TimePicker
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"></TimePicker>
+            android:id="@+id/startTime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:layout_marginRight="5dp"
+            android:timePickerMode="spinner" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="4">
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_gravity="center"
             android:text="終了時間"/>
 
         <TimePicker
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"></TimePicker>
+            android:id="@+id/endTime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:layout_marginRight="5dp"
+            android:timePickerMode="spinner"/>
     </LinearLayout>
+
+    <Button
+        android:text="タイマーをセットする"
+        android:id="@+id/setTimerButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
