--- a/app/src/main/res/layout/change_password_layout.xml
+++ b/app/src/main/res/layout/change_password_layout.xml
@@ -32,7 +32,7 @@
         android:background="@drawable/newtouroku"
         android:hint="新しいPASSWORDを入力してください。"
         android:textSize="30dp"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_margin="16dp"
@@ -46,7 +46,7 @@
         android:background="@drawable/newtouroku"
         android:hint="新しいPASSWORDを再度入力してください。"
         android:textSize="30dp"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_margin="16dp"
