--- a/app/src/main/res/layout/fragment_layout.xml
+++ b/app/src/main/res/layout/fragment_layout.xml
@@ -16,7 +16,7 @@
         >
 
         <!--グラフ-->
-        <com.github.mikephil.charting.charts.CombinedChart
+        <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/chart"
             android:layout_width="match_parent"
             android:layout_height="300dp"
@@ -33,12 +33,13 @@
          -->
 
         <!--金額-->
-        <ImageView
+        <TextView
             android:layout_below="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:background="#00dfff"
-            android:id="@+id/imageView2"
+            android:id="@+id/moneyTextView"
+            android:textSize="20dp"
             android:layout_marginBottom="10dp"
             />
 
@@ -47,7 +48,7 @@
             android:layout_height="wrap_content"
             android:text="タイマー"
             android:id="@+id/TimerButton"
-            android:layout_below="@+id/imageView2"
+            android:layout_below="@+id/moneyTextView"
 
             />
 
