--- a/app/src/main/res/layout/timer_layout.xml
+++ b/app/src/main/res/layout/timer_layout.xml
@@ -10,6 +10,13 @@
         android:minHeight="?android:actionBarSize"
         android:background="@color/colorPrimary" />
 
+    <Switch
+        android:id="@+id/flagswitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="タイマーを使用する" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
