--- a/app/src/main/res/layout/useradd_layout.xml
+++ b/app/src/main/res/layout/useradd_layout.xml
@@ -45,7 +45,7 @@
             android:background="@drawable/newtouroku"
             android:hint=" PASSWORD"
             android:textSize="30dp"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_alignParentStart="true"
